--- a/public/signup.html
+++ b/public/signup.html
@@ -16,8 +16,8 @@
         id="signup" hidden>
         <input type="hidden" name="form-name" value="signup" />
         <div className="col-lg-12">
-            <h5 className="text-dark mb-0">欢迎来到 MSCGroup</h5>
-            <h3 className="section-title mb-40">注册成为 MSCGroup 会员</h3>
+            <h5 className="text-dark mb-0">欢迎来到 MSC</h5>
+            <h3 className="section-title mb-40">注册成为 MSC 会员</h3>
         </div>
         <div className="col-lg-12 text-left">
             <p>个人信息</p>
